# Xmrig-dogemone

./: CMakeLists.txt  compat.h  options.c  persistent_memory.h  xmrig.c
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
algo/cryptonight/: cryptonight.c  cryptonight_av1_aesni.c  cryptonight_av3_softaes.c  cryptonight_av4_softaes_double.c  dogemone.c  dogemone.h
crypto/: c_blake256.c  c_blake256.h  yespower.c
utils/: summary.c
